--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,6 @@
     <string name="action_sign_in">Log in</string>
     <string name="action_register"> Register </string>
     <string name="action_sign_in_short">Log in</string>
-    <string name="welcome">"Welcome !"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
@@ -25,6 +24,11 @@
     <string name="email_prompt"> Email </string>
     <string name="cpassword_prompt"> Confirm Password </string>
     <string name="terms"> By clicking register you are agreeing to our terms. </string>
+    <string name="welcome"> Welcome, </string>
+    <string name="acc_settigns"> Update Account </string>
+    <string name="enrolled_courses"> Enrolled Courses </string>
+    <string name="assignments"> Assignments </string>
+    <string name="activities"> Exercise </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
