--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Code Simulator and Checker</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_courses">Courses</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_account"> Account </string>
     <string name="title_activity_login">Log in</string>
@@ -29,6 +29,16 @@
     <string name="enrolled_courses"> Enrolled Courses </string>
     <string name="assignments"> Assignments </string>
     <string name="activities"> Exercise </string>
+    <string name="enroll_course"> Enroll Course </string>
+    <string name="search_course"> Search Course </string>
+    <string name="search"> Search </string>
+    <string name="messages"> Messages </string>
+    <string name="code_playground"> Code Playground </string>
+    <string name="playground"> Playground </string>
+    <string name="playground_subtitle"> You can test your code here. </string>
+    <string name="source_code"> Code </string>
+    <string name="result"> Result </string>
+    <string name="compile"> Run  </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
