--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="source_code"> Code </string>
     <string name="result"> Result </string>
     <string name="compile"> Run  </string>
+    <string name="placeholder">public class  Solution { \n\t public static void main(String[] args) { \n\t\t  System.out.println(\"Hello World\"); \n \t } \n } </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
