--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="placeholder">public class  Solution { \n\t public static void main(String[] args) { \n\t\t  System.out.println(\"Hello World\"); \n \t } \n } </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="no_internet"> No response. Please check your internet connection. </string>
 </resources>
