--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,15 +33,18 @@
     <string name="search_course"> Search Course </string>
     <string name="search"> Search </string>
     <string name="messages"> Messages </string>
-    <string name="code_playground"> Code Playground </string>
+    <string name="code_playground"> Code </string>
     <string name="playground"> Playground </string>
     <string name="playground_subtitle"> You can test your code here. </string>
     <string name="source_code"> Code </string>
     <string name="result"> Result </string>
     <string name="compile"> Run  </string>
+    <string name="load_from_file"> Load File </string>
     <string name="placeholder">public class  Solution { \n\t public static void main(String[] args) { \n\t\t  System.out.println(\"Hello World\"); \n \t } \n } </string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="no_internet"> No response. Please check your internet connection. </string>
     <string name="invalid_credentials"> Invalid credentials </string>
+    <string name="view_all"> View All </string>
+    <string name="registration_success"> Submitted </string>
+    <string name="registration_success_sub"> Please wait for the confirmation of your registration. </string>
 </resources>
